# lacuna

./: .env.dev  .fossa.yml  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Dockerfile.test  MANIFEST.in  README.md  SECURITY.md  alembic.ini  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  container.yml  docs.yml  fossa.yml  package.yml  test.yml  validate.yml
ARCHITECTURE/: index.html
AUDIT_LOGGING/: index.html
CONTRIBUTING/: index.html
DATA_GOVERNANCE/: index.html
DEPLOYMENT/: index.html
DEVELOPMENT/: index.html
INTEGRATIONS/: index.html
LINEAGE/: index.html
PLUGINS/: index.html
POLICY_AS_CODE/: index.html
SECURITY/: index.html
USER_GUIDE/: index.html
api/python/: index.html
api/rest/: index.html
config/: classification_patterns.yaml  default.yaml  dev.yaml  plugins.yaml  proprietary_terms.yaml
deploy/: README.md
deploy/docker/: .env.example  docker-compose.ha.yaml  docker-compose.prod.yaml  init-db.sql  nginx.conf
deploy/helm/lacuna/: Chart.yaml  values-production.yaml  values.yaml
deploy/helm/lacuna/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  migrations-job.yaml  networkpolicy.yaml  opa.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: ARCHITECTURE.md  AUDIT_LOGGING.md  CONTRIBUTING.md  DATA_GOVERNANCE.md  DEPLOYMENT.md  DEVELOPMENT.md  INTEGRATIONS.md  LINEAGE.md  PLUGINS.md  POLICY_AS_CODE.md  USER_GUIDE.md  index.md  license.md
docs/api/: python.md  rest.md
docs/getting-started/: installation.md  quick-start.md
examples/: README.md  api_client.py  audit_logging.py  basic_classification.py  batch_classification.py  custom_classifier.py  governance_workflow.py  lineage_tracking.py  policy_evaluation.py
getting-started/installation/: index.html
getting-started/quick-start/: index.html
lacuna/: __init__.py  __version__.py
lacuna/api/: __init__.py  app.py
lacuna/api/routes/: __init__.py  audit.py  classify.py  evaluate.py  health.py  lineage.py
lacuna/audit/: __init__.py  backend.py  logger.py  memory_backend.py
lacuna/auth/: __init__.py  api_keys.py  dependencies.py  models.py
lacuna/classifier/: __init__.py  embedding.py  heuristic.py  llm.py  pipeline.py
lacuna/cli/: __init__.py  admin.py
lacuna/config/: __init__.py  loader.py  settings.py
lacuna/db/: base.py  models.py
lacuna/engine/: __init__.py  governance.py  result.py
lacuna/lineage/: __init__.py  backend.py  memory_backend.py  tracker.py
lacuna/models/: audit.py  classification.py  data_operation.py  lineage.py  policy.py
lacuna/policy/: __init__.py  client.py  engine.py
lacuna/web/: __init__.py
lacuna/web/routes/: admin.py  user.py
lacuna/web/templates/: base.html
lacuna/web/templates/admin/: alerts.html  api_keys.html  audit.html  config.html  dashboard.html  policies.html  users.html
lacuna/web/templates/user/: dashboard.html  history.html  recommendations.html  violations.html
license/: index.html
migrations/: env.py
migrations/versions/: 20250119_001_initial_schema.py
policies/: base.rego  export.rego
search/: search_index.json
tests/: __init__.py  conftest.py  test_api_routes.py  test_audit.py  test_auth.py  test_classifier.py  test_cli.py  test_config_loader.py  test_dev_mode.py  test_engine.py  test_lineage.py  test_lineage_tracker.py  test_lineage_tracker_extended.py  test_memory_audit_backend.py  test_memory_lineage_backend.py  test_models.py  test_policy.py  test_policy_client.py  test_policy_engine.py  test_settings.py
tests/integration/: conftest.py  test_api.py  test_database.py  test_opa.py  test_redis.py
