[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lacuna"
version = "0.1.0"
description = "Privacy-aware query classification and routing for RAG systems - the protected space where your knowledge stays yours"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache 2.0"}
authors = [
    {name = "witlox"}
]
keywords = [
    "rag",
    "privacy",
    "llm",
    "query-classification",
    "data-sovereignty",
    "retrieval-augmented-generation",
    "lacuna",
    "pii-detection",
    "privacy-router"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache 2.0 License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "qdrant-client>=1.7.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "numpy>=1.24.0",
    "regex>=2023.0.0",
    "tiktoken>=0.5.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "networkx>=3.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "tenacity>=8.2.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

# RAG framework integrations
llamaindex = [
    "llama-index-core>=0.10.0",
]

langchain = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
]

# Alternative vector databases
chromadb = [
    "chromadb>=0.4.0",
]

milvus = [
    "pymilvus>=2.3.0",
]

# Classification plugins - Individual users
plugins-individual = [
    "presidio-analyzer>=2.2.0",  # PII detection (local)
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",  # Required by Presidio
    "setfit>=1.0.0",  # Few-shot classification
]

# Classification plugins - Enterprise
plugins-enterprise = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    "setfit>=1.0.0",
    "opa-python-client>=1.3.0",  # Open Policy Agent
]

# Domain-specific classifiers
plugins-healthcare = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    "scispacy>=0.5.0",  # Medical NER
]

plugins-finance = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]

# Cloud integrations (enterprise only, optional)
cloud-azure = [
    "azure-ai-textanalytics>=5.3.0",  # Azure Text Analytics
]

cloud-gcp = [
    "google-cloud-dlp>=3.14.0",  # Google DLP (on-prem deployment)
]

# All plugins for development/testing
plugins-all = [
    "lacuna[plugins-individual,plugins-enterprise,plugins-healthcare,plugins-finance]",
]

# Complete installation with all optional features
all = [
    "lacuna[dev,llamaindex,langchain,chromadb,milvus,plugins-all]",
]

[project.scripts]
lacuna = "lacuna.cli:main"

[project.urls]
Homepage = "https://github.com/witlox/lacuna"
Documentation = "https://github.com/witlox/lacuna/tree/main/docs"
Repository = "https://github.com/witlox/lacuna"
Issues = "https://github.com/witlox/lacuna/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lacuna*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py39"

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex (will address case by case)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"tests/*" = ["F401", "F811"]  # Allow test fixtures

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "qdrant_client.*",
    "chromadb.*",
    "llama_index.*",
    "langchain.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=lacuna",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["lacuna"]
omit = [
    "tests/*",
    "examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
