[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lacuna"
dynamic = ["version"]
description = "Privacy-aware query classification and routing for RAG systems - the protected space where your knowledge stays yours"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache 2.0"}
authors = [
    {name = "witlox"}
]
keywords = [
    "rag",
    "privacy",
    "llm",
    "query-classification",
    "data-sovereignty",
    "retrieval-augmented-generation",
    "lacuna",
    "pii-detection",
    "privacy-router"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyyaml>=6.0.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "openai>=2.15.0",
    "sentence-transformers>=5.1.2",
    "torch>=2.8.0",
    "qdrant-client>=1.16.1",
    "requests>=2.32.5",
    "aiohttp>=3.13.3",
    "numpy>=2.0.2",
    "regex>=2026.1.15",
    "tiktoken>=0.12.0",
    "prometheus-client>=0.24.1",
    "structlog>=25.5.0",
    "sqlalchemy>=2.0.45",
    "alembic>=1.16.5",
    "psycopg2-binary>=2.9.11",
    "networkx>=3.2.1",
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.39.0",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.5",
    "redis>=7.0.1",
    "tenacity>=9.1.2",
    "click>=8.1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "black>=25.11.0",
    "ruff>=0.14.13",
    "mypy>=1.19.1",
    "pre-commit>=4.3.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
]

# RAG framework integrations
llamaindex = [
    "llama-index-core>=0.14.12",
]

langchain = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
]

# Alternative vector databases
chromadb = [
    "chromadb>=1.4.1",
]

milvus = [
    "pymilvus>=2.6.6",
]

# Classification plugins - Individual users
plugins-individual = [
    "presidio-analyzer>=2.2.360",  # PII detection (local)
    "presidio-anonymizer>=2.2.360",
    "spacy>=3.8.11",  # Required by Presidio
    "setfit>=1.1.3",  # Few-shot classification
]

# Classification plugins - Enterprise
plugins-enterprise = [
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "spacy>=3.8.11",
    "setfit>=1.1.3",
    "opa-python-client>=2.0.3",  # Open Policy Agent
]

# Domain-specific classifiers
plugins-healthcare = [
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "spacy>=3.8.11",
    "scispacy>=0.6.2",  # Medical NER
]

plugins-finance = [
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
]

# Cloud integrations (enterprise only, optional)
cloud-azure = [
    "azure-ai-textanalytics>=5.3.0",  # Azure Text Analytics
]

cloud-gcp = [
    "google-cloud-dlp>=3.34.0",  # Google DLP (on-prem deployment)
]

# All plugins for development/testing
plugins-all = [
    "lacuna[plugins-individual,plugins-enterprise,plugins-healthcare,plugins-finance]",
]

# Complete installation with all optional features
all = [
    "lacuna[dev,llamaindex,langchain,chromadb,milvus,plugins-all]",
]

[project.scripts]
lacuna = "lacuna.cli:main"

[project.urls]
Homepage = "https://github.com/witlox/lacuna"
Documentation = "https://github.com/witlox/lacuna/tree/main/docs"
Repository = "https://github.com/witlox/lacuna"
Issues = "https://github.com/witlox/lacuna/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lacuna*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.dynamic]
version = {attr = "lacuna.__version__.__version__"}

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex (will address case by case)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"tests/*" = ["F401", "F811"]  # Allow test fixtures

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "qdrant_client.*",
    "chromadb.*",
    "llama_index.*",
    "langchain.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "lacuna.db.*",
    "lacuna.audit.backend",
    "lacuna.lineage.backend",
]
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = [
    "lacuna.web.*",
    "lacuna.cli.admin",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=lacuna",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["lacuna"]
omit = [
    "tests/*",
    "examples/*",
    "lacuna/web/*",
    "lacuna/cli/admin.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
